# ntchat_bot

./: .env.example  .gitignore  create_shortcut.bat  daemon.py  launch.bat  main.py  pyproject.toml
scripts/: convert_log_to_json.py  create_mysql_database.py  migrate_contacts.py  migrate_messages_raw_msg.py  migrate_messages_timestamp.py  migrate_messages_type.py  migrate_sqlite_to_mysql.py  reorder_contacts.py  reorder_messages_raw_msg.py  reorder_messages_timestamp.py
src/ntchat_bot/: logger.py  registry.py  settings.py
src/ntchat_bot/handlers/: __init__.py  contact_handler.py  forward_handler.py  media_handler.py  room_handler.py  system_handler.py  text_handler.py
src/ntchat_bot/services/: __init__.py  base_service.py  mysql_service.py  sqlite_service.py
web/: app.py
web/templates/: index.html
